@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006-2015 Andreas Persson
+ * Copyright (C) 2006-2016 Andreas Persson
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -1463,7 +1463,7 @@ void MainWindow::on_action_help_about()
     dialog.set_name("Gigedit");
 #endif
     dialog.set_version(VERSION);
-    dialog.set_copyright("Copyright (C) 2006-2015 Andreas Persson");
+    dialog.set_copyright("Copyright (C) 2006-2016 Andreas Persson");
     const std::string sComment =
         _("Built " __DATE__ "\nUsing ") +
         ::gig::libraryName() + " " + ::gig::libraryVersion() + "\n\n" +
